--- a/README
+++ b/README
@@ -1,3 +1,94 @@
-apertium-uzb, morphological analyzer for Uzbek
+Turkish and Uzbek: `apertium-tur-uzb`
+===============================================================================
 
-v 0.01beta
+This is an Apertium language pair for translating between Turkish and
+Uzbek. What you can use this language package for:
+
+* Translating between Turkish and Uzbek
+* Morphological analysis of Turkish and Uzbek
+* Part-of-speech tagging of Turkish and Uzbek
+
+For information on the latter two points, see subheading "For more
+information" below.
+
+Requirements
+-------------------------------------------------------------------------------
+
+You will need the following software installed:
+
+* lttoolbox (>= 3.3.0)
+* apertium (>= 3.3.0)
+* vislcg3 (>= 0.9.9.10297)
+* hfst (>= 3.8.2)
+* apertium-tur
+* apertium-uzb
+
+If this does not make any sense, we recommend you look at: www.apertium.org.
+
+Compiling
+-------------------------------------------------------------------------------
+
+Given the requirements being installed, you should be able to just run:
+
+```console
+$ ./configure
+$ make
+# make install
+```
+
+You can use `./autogen.sh` instead of `./configure` in case you're compiling
+from source. If you installed any prerequisite language packages using a
+`--prefix` with `./configure`, make sure to use the same `--prefix` when running
+`./configure` here.
+
+Testing
+-------------------------------------------------------------------------------
+
+If you are in the source directory after running make, the following
+commands should work:
+
+```console
+$ echo "TODO test sentence 1" | apertium -d . tur-uzb
+TODO test translated sentence 1
+
+$ echo "TODO test sentence 2" | apertium -d . uzb-tur
+TODO test translated sentence 2
+```
+
+After installing somewhere in `$PATH`, you should be able to do e.g.
+
+```console
+$ echo "TODO test sentence 1" | apertium tur-uzb
+TODO test translated sentence 1
+```
+
+Files and data
+-------------------------------------------------------------------------------
+
+* [`apertium-tur-uzb.tur-uzb.dix`](apertium-tur-uzb.tur-uzb.dix) - Bilingual dictionary
+* [`apertium-tur-uzb.tur-uzb.t1x`](apertium-tur-uzb.tur-uzb.t1x) - Chunking rules for translating into Uzbek
+* [`apertium-tur-uzb.uzb-tur.t1x`](apertium-tur-uzb.uzb-tur.t1x) - Chunking rules for translating into Turkish
+* [`apertium-tur-uzb.tur-uzb.t2x`](apertium-tur-uzb.tur-uzb.t2x) - Interchunk rules for translating into Uzbek
+* [`apertium-tur-uzb.uzb-tur.t2x`](apertium-tur-uzb.uzb-tur.t2x) - Interchunk rules for translating into Turkish
+* [`apertium-tur-uzb.tur-uzb.t3x`](apertium-tur-uzb.tur-uzb.t3x) - Postchunk rules for translating into Uzbek
+* [`apertium-tur-uzb.uzb-tur.t3x`](apertium-tur-uzb.uzb-tur.t3x) - Postchunk rules for translating into Turkish
+* [`apertium-tur-uzb.tur-uzb.lrx`](apertium-tur-uzb.tur-uzb.lrx) - Lexical selection rules for translating into Uzbek
+* [`apertium-tur-uzb.uzb-tur.lrx`](apertium-tur-uzb.uzb-tur.lrx) - Lexical selection rules for translating into Turkish
+* [`modes.xml`](modes.xml) - Translation modes
+
+For more information
+-------------------------------------------------------------------------------
+
+* http://wiki.apertium.org/wiki/Installation
+* http://wiki.apertium.org/wiki/apertium-tur-uzb
+* http://wiki.apertium.org/wiki/Using_an_lttoolbox_dictionary
+
+Help and support
+-------------------------------------------------------------------------------
+
+If you need help using this language pair or data, you can contact:
+
+* Mailing list: apertium-stuff@lists.sourceforge.net
+* IRC: `#apertium` on irc.freenode.net (irc://irc.freenode.net/#apertium)
+
+See also the file [`AUTHORS`](AUTHORS), included in this distribution.
